--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^1.1.0
   get: ^4.6.6
   get_storage: ^2.1.1
+  intl: ^0.18.1
+  shimmer: ^3.0.0
 #  dio: ^5.3.3
 
 dev_dependencies:
